<resources>
    <!-- General strings -->
    <string name="app_name">MagicCards</string>
    <string name="button_back">Atrás</string>

    <!-- Strings Error Screen -->
    <string name="error_message">Ha habido un error</string>
    <string name="button_try_again">Intentar de nuevo</string>

    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="cards_list_fragment_label">Cards List Fragment</string>
    <string name="card_detail_fragment_label">Card Detail Fragment</string>

    <!-- Strings used for HomeFragment -->
    <string name="welcome_text">¡Bienvenido a Magic Cards!</string>
    <string name="author_name">Mónica Almaraz Lozano</string>
    <string name="author_mail">malmaraz@hiberus.com</string>
    <string name="author_date">14/03/2022</string>
    <string name="button_enter">Entrar</string>

    <!-- Cards List Fragment -->
    <string name="recycler_card_name">Nombre</string>
    <string name="recycler_card_type">Tipo</string>
    <string name="recycler_card_rarity">Rareza</string>
</resources>